--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,5 @@
 spring:
   datasource:
+    url: jdbc:h2:mem:tacocloud;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
   generate-unique-name: false
   name: tacocloud
