--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,13 @@
 version: "3.8"
 services:
-  mongodb:
-    image: mongo
-    container_name: my-mongo
+  postgres:
+    image: postgres:13
+    container_name: simple-postgres
     ports:
-      - '27017:27017'
-    volumes:
-      - data:/data
+      - "5432:5432"
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=root
-  mongo-express:
-    image: mongo-express
-    container_name: mongo-express
-    restart: always
-    ports:
-      - '8082:8082'
-    volumes:
-      - data:/data
-    environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=root
-      - ME_CONFIG_MONGODB_SERVER=my-mongo
-volumes:
-  data: {}
-networks:
-  default:
-    name: mongodb_network
+      POSTGRES_DB: "postgres"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+   
+  
