--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,7 @@
 spring:
+  profiles:
+    active: dev
+  
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
@@ -12,3 +15,26 @@ server:
 taco:
   orders:
     pageSize: 10
+
+
+---    
+spring:
+  config:
+    activate:
+      on-profile: dev
+
+logging:
+  level:
+    root: info
+    org.springframework.web: info
+
+---
+spring:
+  config:
+    activate:
+      on-profile: test  
+
+logging:
+  level:
+    root: DEBUG
+    org.springframework.web: warn
